# PFE

./: README.md  force.txt
backend/: DEMO_GUIDE.md  EXECUTION_SUMMARY.md  IMPLEMENTATION_PQC_LPP.md  INTERACTIVE_DEMO.md  README_PROTOTYPE.md  TEST_REPORT.md  TEST_RESULTS.json  advancedDemo.js  demo-api-server.js  demo-package.json  main.js  test-complete-system.js  test-concrete-system.js
backend/decentralized-storage/: .env.example  .gitignore  DOCKER_COMPOSE_UPDATES.md  Dockerfile  EXECUTION_GUIDE.md  FILES_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRE_PRODUCTION_CHECKLIST.md  QUICK-START.md  README-v2-PQ.md  README.md  README_DELIVERY.md  README_WORKFLOWS.md  START_HERE.md  credentialRoutes.new.js  docker-compose.yml  docker-entrypoint.sh  inspect-wasm.js  jest.config.js  package-lock.json  package.json  redis.conf  retrieve.corrected.js  run-all.ps1  run-all.sh  run-interactive.js  store.corrected.js  test-wasm-config.js  test-wasm-direct.js  test-wasm-init.js
backend/decentralized-storage/examples/: pq-workflow.js  retrieve-credential.js  store-credential.js
backend/decentralized-storage/monitoring/: prometheus.yml
backend/decentralized-storage/src/: config.js  (+1 more)
backend/extractor/: .gitignore  Dockerfile  requirements.txt
backend/identity_workspace/: .gitignore  Cargo.toml  QSDID_Identity_Management_Documentation.tex  claims.json  identity_workspace.code-workspace  signature_report.json
backend/identity_workspace/hybrid_signer/: Cargo.toml
backend/identity_workspace/hybrid_signer/benches/: hybrid_bench.rs
backend/identity_workspace/hybrid_signer/src/: lib.rs
backend/identity_workspace/hybrid_signer/tests/: integration_test.rs
backend/identity_workspace/identity_core/: Cargo.toml  README.md
backend/identity_workspace/identity_core/src/: custom_time.rs  error.rs  lib.rs
backend/identity_workspace/identity_core/src/common/: context.rs  data_url.rs  key_comparable.rs  mod.rs  one_or_many.rs  one_or_set.rs  ordered_set.rs  single_struct_error.rs  string_or_url.rs  timestamp.rs  url.rs
backend/identity_workspace/identity_core/src/convert/: base_encoding.rs  json.rs  mod.rs
backend/identity_workspace/identity_core/tests/: custom_time.rs
backend/identity_workspace/identity_credential/: Cargo.toml
backend/identity_workspace/identity_credential/src/: lib.rs
backend/identity_workspace/identity_did/: Cargo.toml  README.md
backend/identity_workspace/identity_did/src/: did.rs  did_compositejwk.rs  did_jwk.rs  did_url.rs  error.rs  lib.rs
backend/identity_workspace/identity_document/: Cargo.toml
backend/identity_workspace/identity_document/src/: lib.rs
backend/identity_workspace/identity_jose/: Cargo.toml  README.md
backend/identity_workspace/identity_jose/examples/: jws_encoding_decoding.rs
backend/identity_workspace/identity_jose/src/: error.rs  lib.rs
backend/identity_workspace/identity_jose/src/jose/: mod.rs  traits.rs
backend/identity_workspace/identity_jose/src/jwk/: composite_jwk.rs  jwk_akp.rs  jwk_ext.rs  key.rs  key_hybrid.rs  key_operation.rs  key_params.rs  key_set.rs  key_type.rs  key_use.rs  mod.rs
backend/identity_workspace/identity_jose/src/jwk/conversion/: ed25519.rs  from_jwk.rs  mod.rs  secp256k1.rs  secp256r1.rs  to_jwk.rs
backend/identity_workspace/identity_jose/src/jwk/curve/: bls.rs  ec.rs  ecx.rs  ed.rs  mod.rs
backend/identity_workspace/identity_jose/src/jws/: algorithm.rs  charset.rs  decoder.rs  format.rs  header.rs  mod.rs  recipient.rs
backend/identity_workspace/identity_jose/src/jws/custom_verification/: error.rs  jws_verifier.rs  mod.rs
backend/identity_workspace/identity_jose/src/jws/encoding/: encoder.rs  mod.rs  utils.rs
backend/identity_workspace/identity_jose/src/jwt/: claims.rs  header.rs  mod.rs
backend/identity_workspace/identity_jose/src/jwu/: base64.rs  mod.rs  serde.rs
backend/identity_workspace/identity_jose/src/tests/: ed25519.rs  es256.rs  hs256.rs  mod.rs  rfc7515.rs  rfc7517.rs  rfc7638.rs  rfc7797.rs  rfc8037.rs  roundtrip.rs
backend/identity_workspace/identity_jose/src/tests/fixtures/: rfc7515.rs  rfc7517.rs  rfc7638.rs  rfc7797.rs  rfc8037_ed25519.rs
backend/identity_workspace/identity_jose/tests/: custom_alg.rs
backend/identity_workspace/identity_pqc_verifier/: Cargo.toml  README.md
backend/identity_workspace/identity_pqc_verifier/src/: lib.rs  oqs_verifier.rs  pqc_verifier.rs
backend/identity_workspace/identity_storage/: Cargo.toml
backend/identity_workspace/identity_storage/examples/: production_test.rs  store_credential.rs  test_complete.rs  test_storage.rs
backend/identity_workspace/identity_storage/src/: lib.rs
backend/identity_workspace/identity_verification/: Cargo.toml
backend/identity_workspace/identity_verification/src/: lib.rs
backend/identity_workspace/pqc_ml_dsa/: Cargo.toml
backend/identity_workspace/pqc_ml_dsa/src/: lib.rs
backend/identity_workspace/pqc_ml_kem/: Cargo.toml
backend/identity_workspace/pqc_ml_kem/benches/: kem_bench.rs
backend/identity_workspace/pqc_ml_kem/src/: lib.rs
backend/identity_workspace/storage_client/: Cargo.toml
backend/identity_workspace/storage_client/src/: lib.rs
backend/identity_workspace/test_pqc/: Cargo.toml
backend/identity_workspace/test_pqc/src/: main.rs
backend/qsdid-api/: Cargo.toml  Dockerfile  credential_requests.json  issuers.json  test_did_api.sh  totp_secrets.json
backend/qsdid-api/src/: main.rs
backend/qsdid-contracts/: .env  deployed-credential-only.json  deployed-zk-local.json  deployed-zk-sepolia.json  deployed.json  hardhat.config.js  package-lock.json  package.json  test-rpc.js
backend/qsdid-identity/: README.md  package-lock.json  package.json
backend/qsdid-wasm/: Cargo.toml  Dockerfile  alice.html  common.js  docker-compose.yml  ecole.html  package-lock.json  package.json  qsdid_wasm.d.ts  qsdid_wasm.js  qsdid_wasm_bg.wasm  server.js  styles.css  test.html
backend/qsdid-wasm/src/: lib.rs
backend/qsdid-wasm/www/: index.html
backend/routes/: totp.js
frontend/verichain-identity-main/: .gitignore  index.html  package-lock.json  package.json
(+193 files in other folders)
