[workspace]
resolver = "2"
members = [
    "identity_core",
    "identity_did",
    "identity_credential",
    "identity_document",
    "identity_verification",
    "identity_pqc_verifier",
    "identity_jose",
    "identity_storage",
    "pqc_ml_dsa", "test_pqc", "hybrid_signer",  "pqc_ml_kem", "storage_client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Asma Mestaysser"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/qsdid-platform"
homepage = "https://github.com/yourusername/qsdid-platform"
readme = "README.md"
description = "Quantum-Secure Decentralized Identity Platform"

[workspace.dependencies]
# Dependencies communes
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
bls12_381_plus = "0.8.17"
json-proof-token = { version = "0.4" }

rand = { version = "0.8.5", features = ["std", "std_rng"] }
oqs = { version = "0.11.0", default-features = true, features = ["vendored"] }
strum = "0.24.1"
product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.8.14", package = "product_common" }
anyhow = "1.0.102"
hex = "0.4.3"
aes-gcm = "0.10"
rand_core = "0.6.4"
base64 = "0.22.1"
tokio = "1.51.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = "0.4.19"
uuid = "1.23.0"
