[package]
name = "qsdid-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ton module hybride
hybrid_signer = { path = "../identity_workspace/hybrid_signer" }
identity_did = { path = "../identity_workspace/identity_did" }

# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
base64 = "0.21"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.10.1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pqc_ml_kem = { version = "0.1.0", path = "../identity_workspace/pqc_ml_kem" }
