[package]
name = "qsdid-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hybrid_signer = { path = "../identity_workspace/hybrid_signer"}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
reqwest = { version = "0.11.27", features = ["json", "wasm-streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
anyhow = "1.0"
hex = "0.4"
base64 = "0.22.1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
blake3 = "1.5"
thiserror = "2.0.18"
uuid = { version = "1.3", features = ["v4"]}

[profile.release]
opt-level = "s"
lto = true

# Forcer getrandom à utiliser le backend JS pour la cible wasm32-unknown-unknown
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }
