[package]
name = "hybrid_signer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true


[dependencies]
pqc_ml_dsa = { path = "../pqc_ml_dsa" }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.10.0"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
chrono = "0.4"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.0"