[package]
name = "identity_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
identity_core = { path = "../identity_core" }
storage_client = { path = "../storage_client" }
pqc_ml_dsa = { path = "../pqc_ml_dsa" }
pqc_ml_kem = { path = "../pqc_ml_kem" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }