[package]
name = "pqc_ml_kem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
oqs.workspace = true
anyhow.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = "0.10"
thiserror.workspace = true
rand.workspace = true
rand_core.workspace = true
[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "kem_bench"
harness = false