[package]
name = "storage_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
reqwest.workspace = true 
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
